--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -93,6 +93,12 @@
 
 
   <!--======================================== -->
+  <!--============= SUUPPORT US ============== -->
+  <!--======================================== -->
+  <!-- <app-supportus></app-supportus> -->
+
+
+  <!--======================================== -->
   <!--================ FOOTER ================ -->
   <!--======================================== -->
   <footer class="text-end">
