--- a/src/app/layouts/home/requirements/requirements.component.html
+++ b/src/app/layouts/home/requirements/requirements.component.html
@@ -5,107 +5,123 @@
   <!--======================================== -->
 
   <section id="requirementsSection" [hidden]="translate.currentLang===ENGLISH">
+    
 
-      <div class="requirementRow">
+        <div class="requirementRow">
 
-          <div class="brochureContainer">
-              <!-- <div class="row mb-2"> -->
-              <div class="imageContainer">
-                  <img src="../assets/img/brochure1.jpg" alt="">
-              </div>
-              <!-- </div> -->
-          </div>
-          <!-- <div class="videoContainer">
-              <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen></iframe>
-          </div> -->
-          <div class="requirementTextContainer">
+            <div id="requirementTitle">
+                <p id="uneteMisionesTitleFirstLine" class="title3">ÚNETE AL</p>
+                <br>
+                <p id="uneteMisionesTitleSecondLine" class="title3">TOUR 2025</p>
+                <hr id="titleHr">
+            </div>
 
-                  <p id="requirementTitle">Para poder emprender con nosotros este viaje necesitas cumplir estos requisitos:</p>
-                  
-                  <ul class="requirementList">
 
-                      <li>Tener amor por las personas y el deseo de llevar el Evangelio a todas las naciones.</li>
-                      
-                      <li>Tener la capacidad de sudar a 30°C a la sombra y aún así anunciar las buenas nuevas con una sonrisa.</li>
-                      
-                      <li>Ser mayor de edad (los menores entre 12 a 17 años sólo con acompañamiento parental).</li>
-                      
-                      <li>Ser parte de una iglesia.</li>
-                      
-                      <li>Tener buena salud (capacidad para estar sentado durante largos períodos, dar paseos de oración y llevar su propio equipaje).</li>
-                      
-                      <li>Tener un pasaporte válido (para viajes fuera de Europa) o documento de identidad/pasaporte (para viajes dentro de Europa).</li>
-                      
-                      <li>Contar con los medios financieros necesarios para cubrir:
-                          <ul>
-                              <li>Boletos/pasaje de avión, tren o autobús.</li>
-                              <li>Costos totales del viaje misionero "Unidos por Europa".</li>
-                          </ul>
-                          *Seguro de accidentes por cuenta propia (no asumimos responsabilidad)
-                          <p class="nota">Nota: si no tienes todos los recursos económicos y crees que Dios te llama a participar, contáctanos.</p>
-                      </li>
-                      
-                      <li>Rellenar el formulario de inscripción (necesitas tener cuenta en Google) y adjuntar una carta de recomendación del pastor de la iglesia.</li>
-                      
-                      <li>Participar en las reuniones de preparación por Zoom antes del viaje misionero.</li>
-                      
-                      <li>La capacidad de continuar la misión con una sonrisa y gozo del Señor, incluso en los mayores desafíos.</li>
+            <div class="brochureContainer">
+                <!-- <div class="row mb-2"> -->
+                <div class="imageContainer">
+                    <img src="../assets/img/brochure1.jpg" alt="">
+                </div>
+                <!-- </div> -->
+            </div>
+            <!-- <div class="videoContainer">
+                <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen></iframe>
+            </div> -->
+            <div class="requirementTextContainer">
 
-                  </ul>
-          </div>
+                    <p id="requirementTitle">Para poder emprender con nosotros este viaje necesitas cumplir estos requisitos:</p>
+                    
+                    <ul class="requirementList">
 
-      </div>
+                        <li>Tener amor por las personas y el deseo de llevar el Evangelio a todas las naciones.</li>
+                        
+                        <li>Tener la capacidad de sudar a 30°C a la sombra y aún así anunciar las buenas nuevas con una sonrisa.</li>
+                        
+                        <li>Ser mayor de edad (los menores entre 12 a 17 años sólo con acompañamiento parental).</li>
+                        
+                        <li>Ser parte de una iglesia.</li>
+                        
+                        <li>Tener buena salud (capacidad para estar sentado durante largos períodos, dar paseos de oración y llevar su propio equipaje).</li>
+                        
+                        <li>Tener un pasaporte válido (para viajes fuera de Europa) o documento de identidad/pasaporte (para viajes dentro de Europa).</li>
+                        
+                        <li>Contar con los medios financieros necesarios para cubrir:
+                            <ul>
+                                <li>Boletos/pasaje de avión, tren o autobús.</li>
+                                <li>Costos totales del viaje misionero "Unidos por Europa".</li>
+                            </ul>
+                            *Seguro de accidentes por cuenta propia (no asumimos responsabilidad)
+                            <p class="nota">Nota: si no tienes todos los recursos económicos y crees que Dios te llama a participar, contáctanos.</p>
+                        </li>
+                        
+                        <li>Rellenar el formulario de inscripción (necesitas tener cuenta en Google) y adjuntar una carta de recomendación del pastor de la iglesia.</li>
+                        
+                        <li>Participar en las reuniones de preparación por Zoom antes del viaje misionero.</li>
+                        
+                        <li>La capacidad de continuar la misión con una sonrisa y gozo del Señor, incluso en los mayores desafíos.</li>
+
+                    </ul>
+            </div>
+
+        </div>
   </section>
 
   <section id="englishRequirementsSection" [hidden]="translate.currentLang===ESPANOL">
 
-      <div class="requirementRow">
+        <div class="requirementRow">
 
-          <div class="brochureContainer">
-              <!-- <div class="row mb-2"> -->
-              <div class="imageContainer">
-                  <img src="../assets/img/brochure2.jpg" alt="">
-              </div>
-              <!-- </div> -->
-          </div>
-          <!-- <div class="videoContainer">
-              <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen></iframe>
-          </div> -->
-          <div class="requirementTextContainer">
+            <div id="requirementTitle">
+                <p id="uneteMisionesTitleFirstLine" class="title3">JOIN THE</p>
+                <br>
+                <p id="uneteMisionesTitleSecondLine" class="title3">2025 TOUR</p>
+                <hr id="titleHr">
+            </div>
 
-                  <p id="requirementTitle">To embark on this journey with us, you need to meet the following requirements:</p>
-                  
-                  <ul class="requirementList">
+            <div class="brochureContainer">
+                <!-- <div class="row mb-2"> -->
+                <div class="imageContainer">
+                    <img src="../assets/img/brochure2.jpg" alt="">
+                </div>
+                <!-- </div> -->
+            </div>
+            <!-- <div class="videoContainer">
+                <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen></iframe>
+            </div> -->
+            <div class="requirementTextContainer">
 
-                      <li>Have love for people and the desire to bring the Gospel to all nations.</li>
-                      
-                      <li>Be able to sweat in 30°C in the shade and still announce the good news with a smile.</li>
-                      
-                      <li>Be of legal age (minors aged 12-17 may participate only with parental accompaniment).</li>
-                      
-                      <li>Be part of a church.</li>
-                      
-                      <li>Have good health (ability to sit for long periods, go on prayer walks, and carry your own luggage).</li>
-                      
-                      <li>Have a valid passport (for travel outside Europe) or identity card/passport (for travel within Europe).</li>
-                      
-                      <li>Have the necessary financial means to cover:
-                          <ul>
-                              <li>Flight, train, or bus tickets.</li>
-                              <li>Total costs of the "United by Europe" mission trip.</li>
-                          </ul>
-                          *Accident insurance at your own expense (we do not assume responsibility)
-                          <p class="nota">Note: If you do not have all the financial resources and believe that God is calling you to participate, please contact us.</p>
-                      </li>
-                      
-                      <li>Fill out the registration form (you need to have a Google account) and attach a recommendation letter from the pastor of your church.</li>
-                      
-                      <li>Participate in the Zoom preparation meetings before the mission trip.</li>
-                      
-                      <li>The ability to continue the mission with a smile and the joy of the Lord, even in the greatest challenges.</li>
+                    <p id="requirementTitle">To embark on this journey with us, you need to meet the following requirements:</p>
+                    
+                    <ul class="requirementList">
 
-                  </ul>
-          </div>
+                        <li>Have love for people and the desire to bring the Gospel to all nations.</li>
+                        
+                        <li>Be able to sweat in 30°C in the shade and still announce the good news with a smile.</li>
+                        
+                        <li>Be of legal age (minors aged 12-17 may participate only with parental accompaniment).</li>
+                        
+                        <li>Be part of a church.</li>
+                        
+                        <li>Have good health (ability to sit for long periods, go on prayer walks, and carry your own luggage).</li>
+                        
+                        <li>Have a valid passport (for travel outside Europe) or identity card/passport (for travel within Europe).</li>
+                        
+                        <li>Have the necessary financial means to cover:
+                            <ul>
+                                <li>Flight, train, or bus tickets.</li>
+                                <li>Total costs of the "United by Europe" mission trip.</li>
+                            </ul>
+                            *Accident insurance at your own expense (we do not assume responsibility)
+                            <p class="nota">Note: If you do not have all the financial resources and believe that God is calling you to participate, please contact us.</p>
+                        </li>
+                        
+                        <li>Fill out the registration form (you need to have a Google account) and attach a recommendation letter from the pastor of your church.</li>
+                        
+                        <li>Participate in the Zoom preparation meetings before the mission trip.</li>
+                        
+                        <li>The ability to continue the mission with a smile and the joy of the Lord, even in the greatest challenges.</li>
 
-    </div>
+                    </ul>
+            </div>
+
+        </div>
 </section>
