--- a/src/app/layouts/home/mission-info/mission-info.component.html
+++ b/src/app/layouts/home/mission-info/mission-info.component.html
@@ -4,11 +4,11 @@
 
 <section id="missionInfoSection" [hidden]="translate.currentLang===ENGLISH">
     
-    <div class="col">
+    <!-- <div class="col">
         <p id="uneteMisionesTitleFirstLine" class="title3">ÚNETE AL</p>
         <br>
         <p id="uneteMisionesTitleSecondLine" class="title3">TOUR 2025</p>
-    </div>
+    </div> -->
 
     <div class="missionInfoRow">
 
@@ -16,10 +16,12 @@
 
                 <!-- <p id="missionInfoTitle">Para poder emprender con nosotros este viaje necesitas cumplir estos requisitos:</p> -->
                 <!-- <h1 class="title">¡Únete al Tour Misionero "Unidos por Europa" 2025!</h1> -->
+                <!-- <h1 class="title">Información:</h1> -->
+                <h1 id="infoTitle">Más Información</h1>
                 <hr>
                 <br>
                 <p class="intro">
-                    ¡Tour Misionero "Unidos por Europa"!
+                    ¡Tour Misionero "Unidos por Europa" 2025!
                 </p>
                 <p class="intro">
                     ¿Estás listo para una experiencia que transformará tu vida y la de muchos más? <span class="emoji">🌍✝️</span>
@@ -94,11 +96,11 @@
 
 <section id="englishMissionInfoSection" [hidden]="translate.currentLang===ESPANOL">
     
-    <div class="col">
+    <!-- <div class="col">
         <p id="uneteMisionesTitleFirstLine" class="title3">JOIN THE</p>
         <br>
         <p id="uneteMisionesTitleSecondLine" class="title3">2025 TOUR</p>
-    </div>
+    </div> -->
 
     <div class="missionInfoRow">
 
@@ -107,10 +109,12 @@
 
                 <!-- <p id="missionInfoTitle">Para poder emprender con nosotros este viaje necesitas cumplir estos requisitos:</p> -->
                 <!-- <h1 class="title">Join the 2025 Missionary Tour "United for Europe"!</h1> -->
+                <!-- <h1 class="title">Information:</h1> -->
+                <h1 id="infoTitle">More Information</h1>
                 <hr>
                 <br>
                 <p class="intro">
-                    Missionary Tour "United for Europe"!
+                    2025 Missionary Tour "United for Europe"!
                 </p>
                 <p class="intro">
                     Are you ready for an experience that will transform your life and the lives of many others? <span class="emoji">🌍✝️</span>
