--- a/src/app/layouts/home/mission-info/mission-info.component.scss
+++ b/src/app/layouts/home/mission-info/mission-info.component.scss
@@ -10,49 +10,17 @@
     }
     //=========== CELL PHONE SIZE ===========//
     @media only screen and (max-width: 1046px) {
-        padding: 80px 30px 70px 30px;
+        padding: 70px 30px 70px 30px;
     }
     //=========== CELL PHONE SIZE ===========//
     // @media only screen and (max-width: 720px) {
     //     padding: 80px 30px 70px 30px;
     // }
     //=========== CELL PHONE SIZE ===========//
-    @media only screen and (max-width: 414px) {
+    @media only screen and (max-width: 430px) {
         padding: 80px 25px 60px 25px;
     }
 
-
-    #uneteMisionesTitleFirstLine {
-        font-size: 1.3rem;
-        color: #3f51b5;
-        letter-spacing: 4px;
-        margin: 0 auto;
-        padding-bottom: 0px;
-        margin-bottom: 0px;
-        text-align: center;
-    } 
-
-    #uneteMisionesTitleSecondLine {
-        //=========== NORMAL SCREEN SIZE ===========//
-        @media only screen and (min-width: 1047px) {
-            font-size: 2.9rem;
-        }
-        //=========== CELL PHONE SIZE ===========//
-        @media only screen and (max-width: 1046px) {
-            font-size: 2.9rem;
-        }
-        //=========== CELL PHONE SIZE ===========//
-        @media only screen and (max-width: 414px) {
-            font-size: 2.6rem;
-        }
-        // font-family: serif !important;
-        color:  var(--bs-dark-rgb);
-        letter-spacing: 6px;
-        margin: 0 auto;
-        padding-bottom: 5px;
-        margin-bottom: 10px;
-        text-align: center;
-    } 
 
 
     .missionInfoRow {
@@ -141,9 +109,32 @@
                 //         font-size: 1.8rem;
                 //     }
                 //     color: #333;
-                //     text-align: center;
+                //     text-align: left;
                 //     margin-bottom: 20px;
                 // }
+
+
+                #infoTitle {
+                    
+                    //=========== CELL PHONE SIZE ===========//
+                    @media only screen and (min-width: 1047px) {
+                        font-size: 2rem;
+                    }
+                    //=========== CELL PHONE SIZE ===========//
+                    @media only screen and (max-width: 1046px) {
+                        font-size: 1.9rem;
+                    }
+                    //=========== CELL PHONE SIZE ===========//
+                    @media only screen and (max-width: 375px) {
+                        font-size: 1.9rem;
+                    }
+                    // color: #333;
+                    // color: #6e6e6e;
+                    color: black;
+                    // color: $gamaColor6;
+                    text-align: center;
+                    margin-bottom: 20px;
+                }
                   
                 .subtitle {
                     
