--- a/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
+++ b/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
@@ -5,18 +5,18 @@
     
     //=========== NORMAL SCREEN SIZE ===========//
     @media only screen and (min-width: 1047px) {
-        padding: 80px 70px;
+        padding: 90px 70px 80px 70px;
     }
     //=========== CELL PHONE SIZE ===========//
     @media only screen and (max-width: 1046px) {
-        padding: 80px 70px;
+        padding: 90px 70px 40px 70px;
     }
     //=========== CELL PHONE SIZE ===========//
     @media only screen and (max-width: 612px) {
         padding: 80px 15px;
     }
     //=========== CELL PHONE SIZE ===========//
-    @media only screen and (max-width: 414px) {
+    @media only screen and (max-width: 430px) {
         padding: 80px 15px 35px 15px;
     }
 
@@ -67,7 +67,7 @@
                 // padding: 0 20px 30px 20px;
             }
             //=========== CELL PHONE SIZE ===========//
-            @media only screen and (max-width: 414px) {
+            @media only screen and (max-width: 430px) {
                 // justify-content: center;
                 // padding: 80px 20px;
                 padding: 0 25px 30px 25px;
@@ -103,7 +103,6 @@
 
             // display: flex;
             justify-content: left;
-            
 
             // flex-direction: column;
             // align-items: center;
@@ -127,7 +126,7 @@
                 padding: 0 70px;
             }
             //=========== CELL PHONE SIZE ===========//
-            @media only screen and (max-width: 414px) {
+            @media only screen and (max-width: 430px) {
                 width: 100%;
                 padding: 0 30px;
             }
