--- a/src/app/layouts/home/supportus/supportus.component.html
+++ b/src/app/layouts/home/supportus/supportus.component.html
@@ -1,1 +1,30 @@
-<p>supportus works!</p>
+  <!--======================================== -->
+  <!--============= SUPPORT US =============== -->
+  <!--======================================== -->
+
+    <section id="missionInfoSection">
+        
+        <!-- <div class="col">
+            <p id="uneteMisionesTitleFirstLine" class="title3">ÚNETE AL</p>
+            <br>
+            <p id="uneteMisionesTitleSecondLine" class="title3">TOUR 2025</p>
+        </div> -->
+
+        <div class="missionInfoRow">
+
+            <div class="missionInfoContainer">
+
+                    <!-- <p id="missionInfoTitle">Para poder emprender con nosotros este viaje necesitas cumplir estos requisitos:</p> -->
+                    <h1 class="title">Apoya el envío de más obreros a la mies</h1>
+                    <!-- <h1 class="title">Información:</h1> -->
+                    <!-- <h1 id="infoTitle">Más Información</h1> -->
+                    <hr>
+                    <br>
+                    <p>¡Ayuda a los misioneros a llegar a Europa!</p>
+                    <p>Siembra ahora para que el Evangelio se siga extendiendo por todo el mundo.</p>
+                    <p>Realmente agradecemos sus oraciones y esfuerzo económico, siguiendo los mandatos de Jesús Cristo.</p>
+                    <p>IBAN: ES XX XXXX XXXX XXXX</p>                    
+
+            </div>
+        </div>
+    </section>
