Cambio plazas disponibles.

--- a/src/app/layouts/home/mission-info/mission-info.component.html
+++ b/src/app/layouts/home/mission-info/mission-info.component.html
@@ -58,8 +58,11 @@
                     <span class="emoji">💰</span> El costo del Tour Misionero debe ser pagado a más tardar al final del mismo.
                 </p>
                 
+                <p class="availablePlaces">
+                    <span class="alertText"><span class="emoji">📌</span>¡Quedan 5 plazas disponibles!</span>
+                </p>
                 <p class="deadline">
-                    <span class="emoji">📌</span> Fecha límite de inscripción: <strong>15.05.2025</strong>
+                    <span class="alertText2">Inscríbete hasta el día 30 de junio.</span>
                 </p>
                 
                 <h2 class="subtitle">Incluye y No Incluye:</h2>
@@ -142,8 +145,14 @@
                     <span class="emoji">💰</span> The cost of the Missionary Tour must be paid by the end of the tour.
                 </p>
                 
+                <!-- <p class="deadline">
+                    <span class="emoji">📌</span> Registration deadline: <strong>31.05.2025</strong>
+                </p> -->
+                <p class="availablePlaces">
+                    <span class="alertText"><span class="emoji">📌</span>5 spots left!</span>
+                </p>
                 <p class="deadline">
-                    <span class="emoji">📌</span> Registration deadline: <strong>15.05.2025</strong>
+                    <span class="alertText2">Register until June 30th.</span>
                 </p>
                 
                 <h2 class="subtitle">Includes and Does not Include:</h2>
