--- a/src/app/layouts/home/mission-info/mission-info.component.scss
+++ b/src/app/layouts/home/mission-info/mission-info.component.scss
@@ -198,12 +198,43 @@
                     }
                 }
                 
-                .cost-note, .payment-note, .deadline, .includes, .excludes {
+                .cost-note, .payment-note, .availablePlaces, .deadline, .includes, .excludes {
                     margin: 10px 0;
-                
+
                     strong {
                         color: #000;
                     }
+                }
+
+                .availablePlaces {
+
+                    .alertText {
+                        background-color: #ffe9e9;
+                        color: #c62828;
+                        padding: 5px 10px;
+                        // border: 1px solid #c62828;
+                        border-radius: 6px;
+                        font-weight: bold;
+                        font-size: 1rem;
+                        margin: 30px 0px !important;
+                        text-align: center;
+                    }
+                }
+
+                .deadline {   
+                    
+                    .alertText2 {
+                        background-color: #ffe9e9;
+                        color: #c62828;
+                        padding: 5px 10px;
+                        // border: 1px solid #c62828;
+                        border-radius: 6px;
+                        // font-weight: bold;
+                        font-size: 1rem;
+                        margin: 30px 0px !important;
+                        text-align: center;
+                    }
+                
                 }
                 
                 .contact-list {
