Actualizacion de finalizacion mision anual.

--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.html
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.html
@@ -17,6 +17,8 @@
           <br>
           <p id="uneteMisionesDescParagraph" class="text">
               <!-- Ponte en contacto con nosotros si te atrae la idea de participar en <abbr data-toggle="tooltip" title="En colaboración con iglesias locales y JCUM">misiones</abbr>. -->
+              <!-- ¡Gracias por tu interés en ser parte de esta gran misión de Dios de 2025! Por favor, completa los siguientes campos para empezar el proceso de inscripción -->
+              <!-- Thank you for your interest in being part of this God's great mission of 2025! Please complete the following fields to start the registration process -->
               {{ 'HOME.JOIN_MISSION.DESCRIPTION' | translate }}.
           </p>
           <br>
