--- a/src/app/layouts/home/mission-info/mission-info.component.html
+++ b/src/app/layouts/home/mission-info/mission-info.component.html
@@ -17,15 +17,17 @@
                 <!-- <p id="missionInfoTitle">Para poder emprender con nosotros este viaje necesitas cumplir estos requisitos:</p> -->
                 <!-- <h1 class="title">¡Únete al Tour Misionero "Unidos por Europa" 2025!</h1> -->
                 <!-- <h1 class="title">Información:</h1> -->
-                <h1 id="infoTitle">Más Información</h1>
+                <!-- <h1 id="infoTitle">Más Información</h1> -->
+                <h1 id="infoTitle">Información del último tour misionero</h1>
                 <hr>
                 <br>
                 <p class="intro">
                     ¡Tour Misionero "Unidos por Europa" 2025!
                 </p>
-                <p class="intro">
-                    ¿Estás listo para una experiencia que transformará tu vida y la de muchos más? <span class="emoji">🌍✝️</span>
-                </p>
+                <!-- <p class="intro"> -->
+                    <!-- ¿Estás listo para una experiencia que transformará tu vida y la de muchos más? <span class="emoji">🌍✝️</span> -->
+                <!-- </p> -->
+
                 <!-- <p class="quote">
                     Jesús nos dio un mandato claro en <strong>Marcos 16:15</strong>:
                     <blockquote>
@@ -41,8 +43,12 @@
                     <!-- <p class="reference">- Marcos 16:15</p> -->
                 </div>
                 
+                <!-- <p class="description"> -->
+                    <!-- Este viaje es más que un recorrido por Europa; es una oportunidad para llevar el mensaje de esperanza y salvación a quienes más lo necesitan. Viviremos tiempos de adoración, evangelismo y servicio, compartiendo el amor de Cristo en cada paso que demos. -->
+                <!-- </p> -->
+
                 <p class="description">
-                    Este viaje es más que un recorrido por Europa; es una oportunidad para llevar el mensaje de esperanza y salvación a quienes más lo necesitan. Viviremos tiempos de adoración, evangelismo y servicio, compartiendo el amor de Cristo en cada paso que demos.
+                    Este viaje fue más que un recorrido por Europa; fue una oportunidad para llevar el mensaje de esperanza y salvación a quienes más lo necesitaban. Vivimos tiempos de adoración, evangelismo y servicio, compartiendo el amor de Cristo en cada paso que dimos.
                 </p>
                 
                 <h2 class="subtitle">📅 Duración y Costo:</h2>
@@ -51,19 +57,30 @@
                     <li>2 semanas: <strong>800 EUR</strong></li>
                     <li>3 semanas: <strong>1000 EUR</strong> (descuento incluido)</li>
                 </ul>
+
+                <!-- <p class="cost-note"> -->
+                    <!-- <strong>Nota:</strong> Si no puedes participar las semanas completas, se calculará <strong>58 EUR/día</strong>. -->
+                <!-- </p> -->
+                
                 <p class="cost-note">
-                    <strong>Nota:</strong> Si no puedes participar las semanas completas, se calculará <strong>58 EUR/día</strong>.
+                    <strong>Nota:</strong> Si no se pudo participar las semanas completas, se calculó <strong>58 EUR/día</strong>.
                 </p>
+
+                <!-- <p class="payment-note"> -->
+                    <!-- <span class="emoji">💰</span> El costo del Tour Misionero debe ser pagado a más tardar al final del mismo. -->
+                <!-- </p> -->
+
                 <p class="payment-note">
-                    <span class="emoji">💰</span> El costo del Tour Misionero debe ser pagado a más tardar al final del mismo.
+                    <span class="emoji">💰</span> El costo del Tour Misionero debió ser pagado a más tardar al final del mismo.
                 </p>
                 
-                <p class="availablePlaces">
-                    <span class="alertText"><span class="emoji">📌</span>¡Quedan 5 plazas disponibles!</span>
-                </p>
-                <p class="deadline">
-                    <span class="alertText2">Inscríbete hasta el día 30 de junio.</span>
-                </p>
+                <!-- <p class="availablePlaces"> -->
+                    <!-- <span class="alertText"><span class="emoji">📌</span>¡Quedan 5 plazas disponibles!</span> -->
+                <!-- </p> -->
+
+                <!-- <p class="deadline"> -->
+                    <!-- <span class="alertText2">Inscríbete hasta el día 30 de junio.</span> -->
+                <!-- </p> -->
                 
                 <h2 class="subtitle">Incluye y No Incluye:</h2>
                 <p class="includes">
@@ -73,8 +90,12 @@
                     <span class="emoji">❌</span> NO incluye: Visados, póliza de seguro de accidentes y seguro médico (deberás gestionarlos por tu cuenta).
                 </p>
                 
+                <!-- <p class="call-to-action"> -->
+                    <!-- <span class="emoji">📅</span> No dejes pasar esta oportunidad. ¡Inscríbete ahora y sé parte de este mover de Dios! -->
+                <!-- </p> -->
+
                 <p class="call-to-action">
-                    <span class="emoji">📅</span> No dejes pasar esta oportunidad. ¡Inscríbete ahora y sé parte de este mover de Dios!
+                    <span class="emoji">📅</span> No dejes pasar esta oportunidad. ¡Inscríbete ahora para la siguiente misión y sé parte de este mover de Dios!
                 </p>
                 
                 <h2 class="subtitle">📞 ¿Tienes preguntas o necesitas ayuda?</h2>
@@ -88,8 +109,12 @@
                     <li><span class="emoji">📧</span> <a href="mailto:tourgamamission.org">tour&#64;gamamission.org</a></li>
                 </ul>
                 
+                <!-- <p class="closing"> -->
+                    <!-- <span class="emoji">🔥</span> ¡Dios tiene un gran propósito para ti en este viaje! <span class="emoji">🚀🔥</span> -->
+                <!-- </p> -->
+
                 <p class="closing">
-                    <span class="emoji">🔥</span> ¡Dios tiene un gran propósito para ti en este viaje! <span class="emoji">🚀🔥</span>
+                    <span class="emoji">🔥</span> ¡Dios tiene un gran propósito para ti en el siguiente viaje! <span class="emoji">🚀🔥</span>
                 </p>
         </div>
 
@@ -113,23 +138,29 @@
                 <!-- <p id="missionInfoTitle">Para poder emprender con nosotros este viaje necesitas cumplir estos requisitos:</p> -->
                 <!-- <h1 class="title">Join the 2025 Missionary Tour "United for Europe"!</h1> -->
                 <!-- <h1 class="title">Information:</h1> -->
-                <h1 id="infoTitle">More Information</h1>
+                <!-- <h1 id="infoTitle">More Information</h1> -->
+                <h1 id="infoTitle">Information about the last missionary tour</h1>
                 <hr>
                 <br>
                 <p class="intro">
                     2025 Missionary Tour "United for Europe"!
                 </p>
-                <p class="intro">
-                    Are you ready for an experience that will transform your life and the lives of many others? <span class="emoji">🌍✝️</span>
-                </p>
+
+                <!-- <p class="intro"> -->
+                    <!-- Are you ready for an experience that will transform your life and the lives of many others? <span class="emoji">🌍✝️</span> -->
+                <!-- </p> -->
 
                 <div class="quote">
                     <p>Jesus gave us a clear command in <strong>Mark 16:15</strong>:</p>
                     <blockquote>“Go into all the world and preach the gospel to every creature.”</blockquote>
                 </div>
                 
+                <!-- <p class="description"> -->
+                    <!-- This trip is more than just a tour of Europe; it is an opportunity to bring the message of hope and salvation to those who need it most. We will experience times of worship, evangelism, and service, sharing the love of Christ in every step we take. -->
+                <!-- </p> -->
+
                 <p class="description">
-                    This trip is more than just a tour of Europe; it is an opportunity to bring the message of hope and salvation to those who need it most. We will experience times of worship, evangelism, and service, sharing the love of Christ in every step we take.
+                    This trip was more than just a tour of Europe; it was an opportunity to bring the message of hope and salvation to those who needed it most. We experienced times of worship, evangelism, and service, sharing the love of Christ in every step we took.
                 </p>
                 
                 <h2 class="subtitle">📅 Duration and Cost:</h2>
@@ -138,22 +169,33 @@
                     <li>2 weeks: <strong>800 EUR</strong></li>
                     <li>3 weeks: <strong>1000 EUR</strong> (discount included)</li>
                 </ul>
+
+                <!-- <p class="cost-note"> -->
+                    <!-- <strong>Note:</strong> Note: If you can’t participate for the full weeks, it will be calculated at <strong>58 EUR/day</strong>. -->
+                <!-- </p> -->
+
                 <p class="cost-note">
-                    <strong>Note:</strong> Note: If you can’t participate for the full weeks, it will be calculated at <strong>58 EUR/day</strong>.
+                    <strong>Note:</strong> Note: If you were unable to participate for the full weeks, it was calculated at <strong>58 EUR/day</strong>.
                 </p>
+
+                <!-- <p class="payment-note"> -->
+                    <!-- <span class="emoji">💰</span> The cost of the Missionary Tour must be paid by the end of the tour. -->
+                <!-- </p> -->
+
                 <p class="payment-note">
-                    <span class="emoji">💰</span> The cost of the Missionary Tour must be paid by the end of the tour.
+                    <span class="emoji">💰</span> The cost of the Missionary Tour had to be paid by the end of the tour.
                 </p>
                 
                 <!-- <p class="deadline">
                     <span class="emoji">📌</span> Registration deadline: <strong>31.05.2025</strong>
                 </p> -->
-                <p class="availablePlaces">
-                    <span class="alertText"><span class="emoji">📌</span>5 spots left!</span>
-                </p>
-                <p class="deadline">
-                    <span class="alertText2">Register until June 30th.</span>
-                </p>
+
+                <!-- <p class="availablePlaces"> -->
+                    <!-- <span class="alertText"><span class="emoji">📌</span>5 spots left!</span> -->
+                <!-- </p> -->
+                <!-- <p class="deadline"> -->
+                    <!-- <span class="alertText2">Register until June 30th.</span> -->
+                <!-- </p> -->
                 
                 <h2 class="subtitle">Includes and Does not Include:</h2>
                 <p class="includes">
@@ -163,8 +205,12 @@
                     <span class="emoji">❌</span> Does not include: Visas, accident insurance, and health insurance (you must manage these on your own).
                 </p>
                 
+                <!-- <p class="call-to-action"> -->
+                    <!-- <span class="emoji">📅</span> Don't miss this opportunity. Sign up now and be part of this move of God! -->
+                <!-- </p> -->
+
                 <p class="call-to-action">
-                    <span class="emoji">📅</span> Don't miss this opportunity. Sign up now and be part of this move of God!
+                    <span class="emoji">📅</span> Don't miss the next opportunity. Sign up now and be part of this move of God!
                 </p>
                 
                 <h2 class="subtitle">📞 Have questions or need help?</h2>
@@ -178,8 +224,12 @@
                     <li><span class="emoji">📧</span> <a href="mailto:tourgamamission.org">tour&#64;gamamission.org</a></li>
                 </ul>
                 
+                <!-- <p class="closing"> -->
+                    <!-- <span class="emoji">🔥</span> God has a great purpose for you on this journey! <span class="emoji">🚀🔥</span> -->
+                <!-- </p> -->
+
                 <p class="closing">
-                    <span class="emoji">🔥</span> God has a great purpose for you on this journey! <span class="emoji">🚀🔥</span>
+                    <span class="emoji">🔥</span> God has a great purpose for you on the next journey! <span class="emoji">🚀🔥</span>
                 </p>
         </div>
 
