--- a/src/app/layouts/home/requirements/requirements.component.html
+++ b/src/app/layouts/home/requirements/requirements.component.html
@@ -10,9 +10,12 @@
         <div class="requirementRow">
 
             <div id="requirementTitle">
-                <p id="uneteMisionesTitleFirstLine" class="title3">ÚNETE AL</p>
+                <!-- <p id="uneteMisionesTitleFirstLine" class="title3">ÚNETE AL</p> -->
+                <p id="uneteMisionesTitleFirstLine" class="title3">REQUERIMIENTOS QUE SE SOLICITARON</p>
+                <!-- <br> -->
                 <br>
-                <p id="uneteMisionesTitleSecondLine" class="title3">TOUR 2025</p>
+                <!-- <p id="uneteMisionesTitleSecondLine" class="title3">TOUR 2025</p> -->
+                <p id="uneteMisionesTitleSecondLine" class="title3">EN EL ÚLTIMO TOUR 2025</p>
                 <hr id="titleHr">
             </div>
 
@@ -29,7 +32,8 @@
             </div> -->
             <div class="requirementTextContainer">
 
-                    <p id="requirementTitle">Para poder emprender con nosotros este viaje necesitas cumplir estos requisitos:</p>
+                    <!-- <p id="requirementTitle">Para poder emprender con nosotros este viaje necesitas cumplir estos requisitos:</p> -->
+                    <p id="requirementTitle">Para poder emprender con nosotros el último viaje, se necesitaron cumplir estos requisitos:</p>
                     
                     <ul class="requirementList">
 
@@ -71,9 +75,11 @@
         <div class="requirementRow">
 
             <div id="requirementTitle">
-                <p id="uneteMisionesTitleFirstLine" class="title3">JOIN THE</p>
+                <!-- <p id="uneteMisionesTitleFirstLine" class="title3">JOIN THE</p> -->
+                <p id="uneteMisionesTitleFirstLine" class="title3">REQUIREMENTS THAT WERE REQUESTED</p>
                 <br>
-                <p id="uneteMisionesTitleSecondLine" class="title3">2025 TOUR</p>
+                <!-- <p id="uneteMisionesTitleSecondLine" class="title3">2025 TOUR</p> -->
+                <p id="uneteMisionesTitleSecondLine" class="title3">IN THE LAST 2025 TOUR</p>
                 <hr id="titleHr">
             </div>
 
@@ -89,7 +95,8 @@
             </div> -->
             <div class="requirementTextContainer">
 
-                    <p id="requirementTitle">To embark on this journey with us, you need to meet the following requirements:</p>
+                    <!-- <p id="requirementTitle">To embark on this journey with us, you need to meet the following requirements:</p> -->
+                    <p id="requirementTitle">To embark on last journey with us, you needed to meet the following requirements:</p>
                     
                     <ul class="requirementList">
 
